[project]
name = "cursor-free-vip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "drissionpage>=4.0.0",
    "psutil>=5.8.0",
    "pyinstaller>=6.12.0",
    "python-dotenv>=1.0.0",
    "pywin32>=308 ; sys_platform == 'win32'",
    "requests>=2.32.3",
    "watchdog>=6.0.0",
]
